# Cmd_Test

./: CMakeLists.txt  Makefile.linux  Makefile.windows  Makefile.wine
src/: Main.c  Math.c
